# fcbwallet

./: CMakeLists.txt  CryptoNoteWallet.cmake  README.md  firstcryptobank
src/: .directory  main.cpp
src/gui/: .directory
src/gui/ui/: .directory  aboutdialog.ui  addressbookdialog.ui  addressbookframe.ui  changepassworddialog.ui  exitwidget.ui  mainwindow.ui  newaddressdialog.ui  newpassworddialog.ui  overviewframe.ui  passworddialog.ui  receiveframe.ui  sendframe.ui  transactiondetailsdialog.ui  transactionsframe.ui  transferframe.ui
src/icons/: .directory
